# qt_ellipse_test

./: CMakeLists.txt
src/: customwidget.cpp  customwidget.h  ellipse_test_exports.h  ellipse_test_main.cpp  ellipseitem.cpp  ellipseitem.h  ellipsetest.cpp  ellipsetest.h  ellipsetest.ui
